--- a/source/_posts/公司/服务器代码更新操作命令.md
+++ b/source/_posts/公司/服务器代码更新操作命令.md
@@ -9,30 +9,55 @@ tags: 服务器
 ===
 `有关服务器代码更新的命令（仅自用）`
 <!--more-->
-## 1. root账户登录
+# 杂项
+```
+前端打包：
+yarn run webpack:prod
+```
+# 服务器代码更新
+## root账户登录
 ```
 ssh -l root -p 22 222.73.159.67
 ```
-## 2. 查看生产线程
+## 查看生产线程
 `该操作需在root账户下进行`
-
 ```
 netstat -anp | grep 端口号（例如：8090、80）
 ```
-## 3. 杀死线程
+## 杀死线程
 `该操作需在root账户下进行`
-
 ```
 kill -9 线程号 （例如：126578）
 ```
-## 4. 启动程序
+## 打包
 `以下命令都需要root账户下进行`
-
 ```
-nohup ./mvnw -Pprod &
+./mvnw -Pprod package
+```
+## 启动程序
+`以下命令都需要root账户下进行`
+```
+nohup java -server -Xms2048m -Xmx2048m  -jar hg-platform-0.0.1-SNAPSHOT.war  &
 ```
 `等上个指令执行完毕后执行`
-
 ```
 tail -f nohup.out
+```
+# 数据库操作
+## 登录mysql
+```
+mysql -u hguser -p
+```
+## drop 数据库
+```
+drop database hgplatform;
+```
+## 新建数据库
+```
+create database hgplatform default charset utf8mb4 collate utf8mb4_general_ci;
+```
+# Elasticsearch操作
+```
+清除Elasticsearch索引：
+curl -XDELETE http://localhost:9200/_all
 ```
