--- a/source/_posts/艺术/耿大师作品集.md
+++ b/source/_posts/艺术/耿大师作品集.md
@@ -15,12 +15,17 @@ tags: 绘画
 > 近期，大师不满足于过往的成就尝试开辟新的领域，现已斥重金购买手绘板，并开始有部分作品问世。
 # 近期作品
 ## 手绘
+### 手绘-3
+> 2019年4月22日，这是值得纪念的一天，耿大师出其不意地发布了她的最新作品——巴黎圣母院“森林”塔顶，该作品是耿大师根据一段18分钟的教学视频[只需9个步骤，你就可以画出整个巴黎圣母院的“森林”塔顶](https://mp.weixin.qq.com/s/qrfy8mnsVvdniXVyQ2S4RQ)所创作。短短十八分钟的学习，便可将其完美复现，耿大师的绘画功底与悟性果然深不可测。
+
+![巴黎圣母院“森林”塔顶](耿大师作品集/手绘-3.jpeg)
+### 手绘-2
+此作品是耿大师自画像（Ps：真人比这还美哦）
+![手绘自画像](耿大师作品集/手绘-2.jpeg)
 ### 手绘-1
 此作品是耿大师手绘处女作
 ![手绘处女作](耿大师作品集/手绘-1.png)
-### 手绘-2
-此作品是耿大师自画像（Ps：真人比这还美哦）
-![手绘处女作](耿大师作品集/手绘-2.jpeg)
+
 # 早期作品
 ## 线描
 ### 线描-1
