--- a/source/_posts/公司/服务器代码更新操作命令.md
+++ b/source/_posts/公司/服务器代码更新操作命令.md
@@ -36,6 +36,10 @@ kill -9 线程号 （例如：126578）
 ```
 ## 启动程序
 `以下命令都需要root账户下进行`
+`进入到target目录`
+```
+cd ./target
+```
 ```
 nohup java -server -Xms2048m -Xmx2048m  -jar hg-platform-0.0.1-SNAPSHOT.war  &
 ```
@@ -55,6 +59,14 @@ drop database hgplatform;
 ## 新建数据库
 ```
 create database hgplatform default charset utf8mb4 collate utf8mb4_general_ci;
+```
+## 导出部分表结构
+```
+mysqldump -hIP地址 -u数据库用户名 -p密码 -d 数据库名称 表名1,表名2 > 文件名.sql;
+```
+## 导入表结构
+```
+mysql -hIP地址 -u数据库用户名 -p密码  数据库名称 < 文件名.sql;
 ```
 # Elasticsearch操作
 ```
