--- a/source/_posts/艺术/耿大师作品集.md
+++ b/source/_posts/艺术/耿大师作品集.md
@@ -15,37 +15,45 @@ tags: 绘画
 > 近期，大师不满足于过往的成就尝试开辟新的领域，现已斥重金购买手绘板，并开始有部分作品问世。
 # 近期作品
 ## 手绘
+### 手绘-7
+![鸟与花的蒙太奇](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-7.jpeg)
+### 手绘-6
+![水墨剪纸风大脑斧](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-6.jpeg)
+### 手绘-5
+![长耳兔子](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-5.jpeg)
+### 手绘-4
+![人脸众](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-4.jpeg)
 ### 手绘-3
 > 2019年4月22日，这是值得纪念的一天，耿大师出其不意地发布了她的最新作品——巴黎圣母院“森林”塔顶，该作品是耿大师根据一段18分钟的教学视频[只需9个步骤，你就可以画出整个巴黎圣母院的“森林”塔顶](https://mp.weixin.qq.com/s/qrfy8mnsVvdniXVyQ2S4RQ)所创作。短短十八分钟的学习，便可将其完美复现，耿大师的绘画功底与悟性果然深不可测。
 
-![巴黎圣母院“森林”塔顶](耿大师作品集/手绘-3.jpeg)
+![巴黎圣母院“森林”塔顶](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-3.jpeg)
 ### 手绘-2
 此作品是耿大师自画像（Ps：真人比这还美哦）
-![手绘自画像](耿大师作品集/手绘-2.jpeg)
+![手绘自画像](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-2.jpeg)
 ### 手绘-1
 此作品是耿大师手绘处女作
-![手绘处女作](耿大师作品集/手绘-1.png)
+![手绘处女作](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E6%89%8B%E7%BB%98-1.png)
 
 # 早期作品
 ## 线描
 ### 线描-1
-![线描-1](耿大师作品集/线描-1.jpeg)
+![线描-1](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-1.jpeg)
 ### 线描-2
-![线描-2](耿大师作品集/线描-2.jpeg)
+![线描-2](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-2.jpeg)
 ### 线描-3
-![线描-3](耿大师作品集/线描-3.jpeg)
+![线描-3](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-3.jpeg)
 ### 线描-4
-![线描-4](耿大师作品集/线描-4.jpeg)
+![线描-4](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-4.jpeg)
 ### 线描-5
-![线描-5](耿大师作品集/线描-5.jpeg)
+![线描-5](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-5.jpeg)
 ### 线描-6
-![线描-6](耿大师作品集/线描-6.jpeg)
+![线描-6](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-6.jpeg)
 ### 线描-7
-![线描-7](耿大师作品集/线描-7.jpeg)
+![线描-7](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-7.jpeg)
 ### 线描-8
-![线描-8](耿大师作品集/线描-8.jpeg)
+![线描-8](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-8.jpeg)
 ### 线描-9
-![线描-9](耿大师作品集/线描-9.jpeg)
+![线描-9](https://elevenlianm-1258946790.cos.ap-shanghai.myqcloud.com/%E8%89%BA%E6%9C%AF/%E7%BA%BF%E6%8F%8F-9.jpeg)
 ## 画像
 ### 画像-笔者
 > 耿大师给笔者画的画像，emmmmm果然就算是耿大师的技巧也救不了我人丑啊
